# sonarlabel

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
data/: annotations.jsonl
examples/: annotations.jsonl  modeling.py  notebook.py
scripts/: plot_sidescan.py  verify_parser_parity.py
