[project]
name = "sonarlabel"
version = "0.1.0"
description = "SonarLabel tooling for SL3 parser parity and simple annotation plotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "sonarlight>=0.1.7",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = false
