[project]
name = "sonarlabel"
version = "0.1.0"
description = "SonarLabel tooling for SL3 parser parity and simple annotation plotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "albumentations>=2.0.8",
  "lightning>=2.0",
  "folium>=0.20.0",
  "matplotlib>=3.10.8",
  "numpy>=1.24",
  "pandas>=2.3.3",
  "pillow>=10.0",
  "scikit-image>=0.21",
  "segmentation-models-pytorch>=0.5.0",
  "sonarlight>=0.1.7",
  "torch>=2.10.0",
  "tensorboard>=2.20.0",
  "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = false
